# IMS_mpt_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  constants.py  dependencies.py  main.py  utils.py
app/auth/: schema.py  service.py
app/auth/adapters/: jwt_service.py
app/auth/repository/: repository.py
app/auth/router/: router_authorize_user.py  router_generate_otp.py  router_get_my_account.py  router_get_otp.py  router_register_user.py  router_reset_password.py  router_update_user.py
app/contact/: contact_repository.py  contact_service.py  schema.py  utils.py
app/contact/repository/: contact_repository.py
app/contact/router/: router_create_contact.py  router_delete_contact.py  router_get_contact_by_id.py  router_get_contacts.py  router_update_contact.py
app/middleware/: AuthMiddleware.py
app/order/: filters.py  order_repository.py  order_service.py  schema.py  utils.py
app/order/router/: router_create_order.py  router_delete_order.py  router_get_expired_orders.py  router_get_order_by_id.py  router_get_orders.py  router_invoice.py  router_patch_order.py  router_update_order.py  (+3 more)
app/petty_cash/: petty_cash_repository.py  petty_cash_service.py  schema.py
app/product/: product_repository.py  product_service.py  schema.py
app/product_category/: product_category_repository.py  product_category_service.py  schema.py
app/unit/: schema.py  unit_repository.py  unit_service.py
docs/: IMS_MPT.drawio
scripts/: migrate_add_branch.py  migrate_invoice_ids.py  recover_contact_address_proof.py
(+17 files in other folders)
