[tool.poetry]
name = "fastapi-application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.3"
python-jose = "^3.5"
pydantic= {extras = ["email"], version = "^2.11"}
fastapi = "^0.115"
uvicorn= {extras = ["standard"], version = "^0.34"}
python-multipart = "*"
pymongo = {extras = ["srv"], version = "^4.13"}
orjson = "^3.10"
pydantic-settings = "^2.9.1"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.7"
ruff = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
